fix: Fixed layout bug on ReviewCardPopover
Fixed bug where card display on ReviewCardPopover would cover the "View Answer" button on a screen wider than 600px.

--- a/src/script/card/card_display/CardDisplay.scss
+++ b/src/script/card/card_display/CardDisplay.scss
@@ -17,12 +17,6 @@
     border-radius: 25px;
 }
 
-@media screen and (min-width: 600px) {
-    .flashcard-face {
-        height: calc(100% - 2rem);
-    }
-}
-
 .flashcard-front-face-rotated {
     transform: rotateY(180deg);
 }
